--- a/package.json
+++ b/package.json
@@ -3,26 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emailjs/browser": "^3.11.0",
-    "@emotion/react": "^11.11.1",
+    "@emailjs/browser": "^4.1.0",
+    "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.9",
-    "@mui/material": "^5.14.9",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@mui/icons-material": "^5.15.7",
+    "@mui/material": "^5.15.7",
+    "@nextui-org/react": "^2.2.9",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.2",
-    "framer-motion": "^10.15.1",
+    "framer-motion": "^11.0.3",
     "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.2",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-router-dom": "^6.22.0",
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^3.5.2"
   },
-  "homepage": "https://ryantixier.dev/",
+  "homepage": "https://ryantixier.github.io/portfolio-revamp",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -b master -d build",
