--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.7",
     "@mui/material": "^5.15.7",
-    "@nextui-org/react": "^2.2.9",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.2",
     "framer-motion": "^11.0.3",
@@ -18,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "^5.0.1",
+    "react-sparkle": "^2.0.0",
     "web-vitals": "^3.5.2"
   },
   "homepage": "https://ryantixier.github.io/portfolio-revamp",
